# bitburner-rsync

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
ci/: cargo-out-dir
src/: main.rs
