[package]
name = "bitburner-rsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
walkdir = "2.3.2"
